syntax = "proto3";

package hermes;
option php_namespace = "App\\Infrastructure\\Grpc\\Hermes";

service HermesHandler {
    rpc Handle (HermesRequest) returns (HermesResponse);
}

message HermesRequest {
    repeated string headers = 1;
    string body = 2;
}

message HermesResponse {
    string result = 1;
}
